@@ -6,3 +6,5 @@ PROJECTNAME = 'mailtoplone.scrawl'
 ADD_PERMISSIONS = {
     # -*- extra stuff goes here -*-
 }
+
+CATEGORY = 'email'
